WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
180845
WebRTC Stats should not be console logged from a background thread
https://bugs.webkit.org/show_bug.cgi?id=180845
Summary
WebRTC Stats should not be console logged from a background thread
youenn fablet
Reported
2017-12-14 15:41:42 PST
ASSERTION FAILED: isMainThread() /Volumes/Data/youenn/dev/Apple/OpenSource/Source/WebCore/bindings/js/DOMWrapperWorld.cpp(72) : WebCore::DOMWrapperWorld &WebCore::mainThreadNormalWorld() 1 0x11d7fcf3d WTFCrash 2 0x110c9917a WebCore::mainThreadNormalWorld() 3 0x110d28796 WebCore::mainWorldExecState(WebCore::Frame*) 4 0x1111995a5 WebCore::Document::didLogMessage(WTFLogChannel const&, WTFLogLevel, WTF::Vector<WTF::JSONLogValue, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>&&) 5 0x111199a7d non-virtual thunk to WebCore::Document::didLogMessage(WTFLogChannel const&, WTFLogLevel, WTF::Vector<WTF::JSONLogValue, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>&&) 6 0x10f6706b8 void WTF::Logger::log<WTF::Logger::LogSiteIdentifier, char [19], webrtc::RTCStats>(WTFLogChannel&, WTFLogLevel, WTF::Logger::LogSiteIdentifier const&, char const (&) [19], webrtc::RTCStats const&) 7 0x10f651271 void WTF::Logger::logAlways<WTF::Logger::LogSiteIdentifier, char [19], webrtc::RTCStats>(WTFLogChannel&, WTF::Logger::LogSiteIdentifier const&, char const (&) [19], webrtc::RTCStats const&) const 8 0x10f65103f WebCore::LibWebRTCMediaEndpoint::OnStatsDelivered(rtc::scoped_refptr<webrtc::RTCStatsReport const> const&) 9 0x10f65130c non-virtual thunk to WebCore::LibWebRTCMediaEndpoint::OnStatsDelivered(rtc::scoped_refptr<webrtc::RTCStatsReport const> const&) 10 0x10bb62be3 webrtc::RTCStatsCollector::DeliverCachedReport() 11 0x10bb7167c webrtc::RTCStatsCollector::AddPartialResults_s(rtc::scoped_refptr<webrtc::RTCStatsReport>) 12 0x10bb668df webrtc::RTCStatsCollector::AddPartialResults(rtc::scoped_refptr<webrtc::RTCStatsReport> const&) 13 0x10bb66c9d webrtc::RTCStatsCollector::ProducePartialResultsOnNetworkThread(long long) 14 0x10bb81533 void rtc::MethodFunctor<webrtc::RTCStatsCollector, void (webrtc::RTCStatsCollector::*)(long long), void, long long>::CallMethod<0>(rtc::sequence<0>) const 15 0x10bb81495 rtc::MethodFunctor<webrtc::RTCStatsCollector, void (webrtc::RTCStatsCollector::*)(long long), void, long long>::operator()() const 16 0x10bb81339 rtc::FireAndForgetAsyncClosure<rtc::MethodFunctor<webrtc::RTCStatsCollector, void (webrtc::RTCStatsCollector::*)(long long), void, long long> >::Execute() 17 0x10b8b2cfe rtc::AsyncInvoker::OnMessage(rtc::Message*)
Attachments
Patch
(2.51 KB, patch)
2017-12-14 17:13 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews117 for mac-elcapitan
(3.40 MB, application/zip)
2017-12-14 19:12 PST
,
EWS Watchlist
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2017-12-14 17:13:52 PST
Created
attachment 329424
[details]
Patch
EWS Watchlist
Comment 2
2017-12-14 19:12:55 PST
Comment on
attachment 329424
[details]
Patch
Attachment 329424
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/5667469
New failing tests: webgl/1.0.2/conformance/context/context-release-upon-reload.html
EWS Watchlist
Comment 3
2017-12-14 19:12:57 PST
Created
attachment 329437
[details]
Archive of layout-test-results from ews117 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews117 Port: mac-elcapitan Platform: Mac OS X 10.11.6
youenn fablet
Comment 4
2017-12-14 21:08:27 PST
Comment on
attachment 329424
[details]
Patch failing test is unrelated
WebKit Commit Bot
Comment 5
2017-12-15 07:38:32 PST
Comment on
attachment 329424
[details]
Patch Clearing flags on attachment: 329424 Committed
r225973
: <
https://trac.webkit.org/changeset/225973
>
WebKit Commit Bot
Comment 6
2017-12-15 07:38:34 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7
2017-12-15 07:40:52 PST
<
rdar://problem/36073411
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug