WebRTC Stats should not be console logged from a background thread https://bugs.webkit.org/show_bug.cgi?id=180845

Patch by Youenn Fablet <youenn@apple.com> on 2017-12-15
Reviewed by Eric Carlson.

Ensuring console log are done in the main thread.

* Modules/mediastream/libwebrtc/LibWebRTCMediaEndpoint.cpp:
(WebCore::LibWebRTCMediaEndpoint::OnStatsDelivered):

Canonical link: https://commits.webkit.org/196769@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225973 268f45cc-cd09-0410-ab3c-d52691b4dbfc